--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,7 +25,7 @@ html
 
     link(rel="stylesheet" href="/bower_components/sweetalert2/dist/sweetalert2.css")
     link(rel='stylesheet', href='/css/main.css')
-    link(rel='stylesheet', href='/css/pewtube.css')
+    link(rel='stylesheet', href='/css/nodetube.css')
     link(rel='shortcut icon', href='/favicon.ico')
     link(href='https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css', rel='stylesheet')
     block extra_css
