--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,7 +1,8 @@
 @import "themes/default/variables";
 
 @import "lib/bootstrap/bootstrap";
-@import "lib/font-awesome/font-awesome";
+@import "lib/font-awesome/fontawesome";
+@import "lib/font-awesome/solid.scss";
 
 @import "themes/default/default";
 
