--- a/views/layout.pug
+++ b/views/layout.pug
@@ -53,7 +53,7 @@ html
     //layout.pug
     include partials/header
 
-    .container
+    .container-fluid(style="padding-left: 0px; padding-right: 0px;")
       include partials/flash
       block content
 
