--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -1,55 +1,29 @@
 extends ../layout
 
 block content
-    div
-        include ../viewPartials/popularUploadsNavbar
+    div(class="container")
+        h1.center-block.pull-left Popular Uploads
+        include ../viewPartials/uploadsNavbar
+    hr
 
-    h1.center-block.text-center #{englishString} (#{viewAmountInPeriod})
-
-    p
-
-        h2.center-block.text-center #{timeAgoEnglish}
-
-        div.center-block.text-center.col-sm-12
-
-
-            br
-
-            //br
-
-            if category
-                include ../viewPartials/categoryDropdown
-
-            include ../viewPartials/popularUploadsMediaDropdown
-
-            include ../viewPartials/sensitivityFilterDropdown
-
-
-        include ../viewPartials/popularUploadsPagination
-
-
-        br
+    div.container
         div.uploads
             if !isACategory
                 include ../viewPartials/categoryOverviews
 
             else
-                each upload in uploads
-                    div.col-sm-4(style="text-align:center;height:360px;")
-
-                        include ../viewPartials/uploadThumbnail
-
-                        include ../viewPartials/uploadDetails
-
-                        // include ../viewPartials/uploadDetailsPopular
+                div.row
+                    each upload in uploads
+                        div.col-md-4.col-sm-6(style="text-align:center;height:360px;")        
+                            include ../viewPartials/uploadDetails
 
 
             include ../viewPartials/adminSensitivityButtons
 
 
-        if uploads
+        if uploads && uploads.length > 0
             div.col-sm-12
-                include ../viewPartials/popularUploadsPagination
+                include ../viewPartials/pagination
 
 
 
@@ -157,5 +131,3 @@ block content
 
     script.
       balanceText();
-
-    include ../viewPartials/mouseOverJavascript
