Recent Uploads redesign + backend changes for filtering

--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -2,63 +2,27 @@ extends ../layout
 
 
 block content
-        style.
-            .dropdown {
-                text-align: center;
-            }
+    div.container
+        h1.center-block.pull-left Recent Uploads
+        include ../viewPartials/uploadsNavbar
+    hr
 
-            input[type=checkbox] {
-                /* Double-sized Checkboxes */
-                -ms-transform: scale(2); /* IE */
-                -moz-transform: scale(2); /* FF */
-                -webkit-transform: scale(2); /* Safari and Chrome */
-                -o-transform: scale(2); /* Opera */
-                padding: 10px;
-            }
-
-        br
-
-        div.center-block.text-center.col-sm-12
-
-
-            a.upload-user-text(href=`${addressPrepend}`)
-                h1 Recently Uploaded
-
-            br
-
-            if category
-                include ../viewPartials/categoryDropdown
-
-            include ../viewPartials/mediaDropdown
-
-            include ../viewPartials/sensitivityFilterDropdown
-
-            include ../viewPartials/pagination
-
-            br
-
-        hr
+    div.container
         div.uploads
             if !isACategory
                 include ../viewPartials/categoryOverviews
 
             else
-                each upload in uploads
-                    if upload.uploader
-                        div.col-sm-4(style="text-align:center;height:310px;")
-                            div(style="width:100%")
-                                include ../viewPartials/uploadThumbnail
-
-                                include ../viewPartials/uploadDetails
+                div.row
+                    each upload in uploads
+                        div.col-md-4.col-sm-6(style="text-align:center;height:360px;")        
+                            include ../viewPartials/uploadDetails
 
             include ../viewPartials/adminSensitivityButtons
 
-            div.center-block.text-center.col-sm-12
-
-                        div.dropdown
-
-                            include ../viewPartials/pagination
-
+        if uploads && uploads.length > 0
+            div.col-sm-12
+                include ../viewPartials/pagination
 
         if user && user.role == 'admin'
             include ../viewPartials/adminChangeRatingsJs
@@ -67,5 +31,3 @@ block content
 
         script.
           balanceText();
-
-        include ../viewPartials/mouseOverJavascript
