--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,6 +24,7 @@ html
     title #{title} - NodeTube
 
     link(rel="stylesheet" href="/bower_components/sweetalert2/dist/sweetalert2.css")
+    link(rel="stylesheet" href="/bower_components/compontents-font-awesome/css/all.css")
     link(rel='stylesheet', href='/css/main.css')
     link(rel='stylesheet', href='/css/nodetube.css')
     link(rel='shortcut icon', href='/favicon.ico')
