Add: front-end without bower

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,8 +23,8 @@ html
 
     title #{title} - NodeTube
 
-    link(rel="stylesheet" href="/bower_components/sweetalert2/dist/sweetalert2.css")
-    link(rel="stylesheet" href="/bower_components/components-font-awesome/css/all.css")
+    link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.33.1/dist/sweetalert2.css')
+    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css')
     link(rel='stylesheet', href='/css/main.css')
     link(rel='stylesheet', href='/css/nodetube.css')
     link(rel='shortcut icon', href='/favicon.ico')
@@ -36,7 +36,7 @@ html
 
     script(src='https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/balance-text/3.2.0/balancetext.min.js')
-    script(src='/bower_components/sweetalert2/dist/sweetalert2.js')
+    script(src='https://cdn.jsdelivr.net/npm/sweetalert2@7.33.1/dist/sweetalert2.js')
 
     link(rel='stylesheet', href='/css/loading-bar.css')
     script(src='/js/loading-bar.js')
