Layout update to facilitie full-width page updates

--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -46,7 +46,7 @@ block content
         }
 
 
-    div.channel-information
+    div.channel-information.container
         div.col-sm-12
             div.col-sm-4
                 h3 #{channel.channelName || channel.channelUrl}
