--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -38,7 +38,7 @@ block content
             br
 
         hr
-        div.uploads
+        div.uploads.container
             if !isACategory
                 include ../viewPartials/categoryOverviews
 
