--- a/views/viewPartials/uploadsNavbar.pug
+++ b/views/viewPartials/uploadsNavbar.pug
@@ -2,7 +2,7 @@ div(style="margin-top: 20px;")
     div.btn-group.pull-right
         if recentPopular == "popular"
             div.dropdown.p-2.btn-group.mx-3
-                button.btn.btn-primary.dropdown-toggle(type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") #{withinDisplayString}
+                button.btn.btn-primary.dropdown-toggle(type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") #{englishString} (#{viewAmountInPeriod})
     
                 div.dropdown-menu(aria-labelledby="dropdownMenuButton")
                     li
