disabled plus_enabled

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -172,7 +172,7 @@ block content
  
           // TODO: export a variable plus_enabled if user enables payments
           div.col-md-4
-              if !plus_enabled
+              if plus_enabled
                   h3.text-center.text-muted NodeTube Plus
                   br
                   div.card.alert-success
