some frontend changes

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -132,7 +132,7 @@ block content
                           h4 $#{user.credit/100}
                           p.text-muted Credit
                       div.col-md-4.col-xs-4.text-center
-                          h4 $$#{user.receivedCredit / 100}
+                          h4 $#{user.receivedCredit / 100}
                           p.text-muted Revenue
 
               div
@@ -172,7 +172,7 @@ block content
  
           // TODO: export a variable plus_enabled if user enables payments
           div.col-md-4
-              if plus_enabled
+              if plusEnabled
                   h3.text-center.text-muted NodeTube Plus
                   br
                   div.card.alert-success
