turn off hover effect

--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -66,4 +66,4 @@ block content
         script.
           balanceText();
 
-        include ../viewPartials/mouseOverJavascript
+        //include ../viewPartials/mouseOverJavascript
