--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -154,4 +154,4 @@ block content
     script.
       balanceText();
 
-    include ../viewPartials/mouseOverJavascript
+    //include ../viewPartials/mouseOverJavascript
