--- a/views/media.pug
+++ b/views/media.pug
@@ -167,7 +167,7 @@ block content
 
 
                 // react functionality
-                div.react(style="width:39%;background-color:white;margin:0 auto;border-radius:10px;margin-bottom:21px;padding-bottom:12px;")
+                div.react(style="width:39%;background-color:white;margin:0 auto;border-radius:10px;margin-bottom:21px;padding-bottom:12px;max-width:453px;min-width:247px;")
                     br
                     each emoji in emojis
                         div(style="padding-right:15px;display:inline-block;")
