fix overflow thing

--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -1,3 +1,8 @@
+style.
+    .preview-image {
+        max-width: 283px;
+    }
+
 
 a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black")
     div.center-block(style="")
